@@ -31,27 +31,88 @@ class VariantSelectViewHelper extends \TYPO3\CMS\Fluid\Core\ViewHelper\AbstractV
     protected $escapeOutput = false;
 
     /**
-     * render
+     * @var \Extcode\Cart\Domain\Model\Product\Product
+     */
+    protected $product = null;
+
+    /**
+     * Initialize arguments.
      *
-     * @param string $id
-     * @param string $name
-     * @param \Extcode\Cart\Domain\Model\Product\Product $product
+     * @return void
+     * @api
+     */
+    public function initializeArguments()
+    {
+        parent::initializeArguments();
+
+        $this->registerArgument(
+            'product',
+            \Extcode\Cart\Domain\Model\Product\Product::class,
+            'product for select options',
+            true
+        );
+        $this->registerArgument('id', 'string', 'id for select');
+        $this->registerArgument('class', 'string', 'class for select');
+        $this->registerArgument('name', 'string', 'name for select');
+        $this->registerArgument('blank', 'string', 'blank adds blank option');
+        $this->registerArgument('required', 'bool', 'required adds html5 required', false, true);
+    }
+
+    /**
+     * render
      *
      * @return string
      */
-    public function render($id = '', $name = '', \Extcode\Cart\Domain\Model\Product\Product $product)
+    public function render()
     {
+        $this->product = $this->arguments['product'];
+
+        $select = [];
+
+        if ($this->hasArgument('id')) {
+            $select[] = 'id="' . $this->arguments['id'] . '" ';
+        }
+        if ($this->hasArgument('class')) {
+            $select[] = 'class="' . $this->arguments['class'] . '" ';
+        }
+        if ($this->hasArgument('name')) {
+            $select[] = 'name="' . $this->arguments['name'] . '" ';
+        }
+        if ($this->hasArgument('required')) {
+            $select[] = 'required ';
+        }
+
+        $out = '<select ' . join(' ', $select) . '>';
+
+        if ($this->hasArgument('blank')) {
+            $out .= '<option value="">' . $this->arguments['blank'] . '</option>';
+        }
+
+        $options = $this->getOptions();
+
+        foreach ($options as $option) {
+            $out .= $option;
+        }
+
+        $out .= '</select>';
+
+        return $out;
+    }
+
+    /**
+     * @return array
+     */
+    protected function getOptions()
+    {
+        $options = [];
+
         $currencyViewHelper = $this->objectManager->get(
             \Extcode\Cart\ViewHelpers\Format\CurrencyViewHelper::class
         );
         $currencyViewHelper->initialize();
         $currencyViewHelper->setRenderingContext($this->renderingContext);
 
-        $out = '';
-
-        $out .= '<select id="' . $id . '" name="' . $name . '">';
-
-        foreach ($product->getBeVariants() as $beVariant) {
+        foreach ($this->product->getBeVariants() as $beVariant) {
             /**
              * @var \Extcode\Cart\Domain\Model\Product\BeVariant $beVariant
              */
@@ -72,17 +133,7 @@ class VariantSelectViewHelper extends \TYPO3\CMS\Fluid\Core\ViewHelper\AbstractV
 
             $specialPricePercentageDiscount = number_format($beVariant->getBestSpecialPricePercentageDiscount(), 2);
 
-            $optionLabelArray = [];
-            if ($product->getBeVariantAttribute1()) {
-                $optionLabelArray[] = $beVariant->getBeVariantAttributeOption1()->getTitle();
-            }
-            if ($product->getBeVariantAttribute2()) {
-                $optionLabelArray[] = $beVariant->getBeVariantAttributeOption2()->getTitle();
-            }
-            if ($product->getBeVariantAttribute3()) {
-                $optionLabelArray[] = $beVariant->getBeVariantAttributeOption3()->getTitle();
-            }
-            $optionLabel = join(' - ', $optionLabelArray);
+            $optionLabel = $this->getOptionLabel($beVariant);
 
             $value = 'value="' . $beVariant->getUid() . '"';
             $data = 'data-regular-price="' . $regularPrice . '"';
@@ -94,11 +145,35 @@ class VariantSelectViewHelper extends \TYPO3\CMS\Fluid\Core\ViewHelper\AbstractV
             if (!$beVariant->getIsAvailable() && $beVariant->getProduct()->getHandleStockInVariants()) {
                 $disabled = 'disabled';
             }
-            $out .= '<option ' . $value . ' ' . $data . ' ' . $disabled . '>' . $optionLabel . '</option>';
+
+            $option = '<option ' . $value . ' ' . $data . ' ' . $disabled . '>' . $optionLabel . '</option>';
+            $options[$optionLabel] = $option;
         }
 
-        $out .= '</select>';
+        return $options;
+    }
 
-        return $out;
+    /**
+     * @param \Extcode\Cart\Domain\Model\Product\BeVariant $beVariant
+     *
+     * @return string
+     */
+    protected function getOptionLabel(
+        \Extcode\Cart\Domain\Model\Product\BeVariant $beVariant
+    ) {
+        $optionLabelArray = [];
+
+        if ($this->product->getBeVariantAttribute1()) {
+            $optionLabelArray[] = $beVariant->getBeVariantAttributeOption1()->getTitle();
+        }
+        if ($this->product->getBeVariantAttribute2()) {
+            $optionLabelArray[] = $beVariant->getBeVariantAttributeOption2()->getTitle();
+        }
+        if ($this->product->getBeVariantAttribute3()) {
+            $optionLabelArray[] = $beVariant->getBeVariantAttributeOption3()->getTitle();
+        }
+        $optionLabel = join(' - ', $optionLabelArray);
+
+        return $optionLabel;
     }
 }
