@@ -1,5 +1,5 @@
 3.0.0
-    2017-03-01
+    2017-03-03
     Daniel Lorenz <daniel.lorenz@extco.de>
 
     * TASK #63: add quantity discounts / graduated prices for products
@@ -15,6 +15,8 @@
     * TASK #80: move external product storage handling to signal slot
     * TASK #82: make *_date fields in order items read only
     * TASK #81: refactor generate*Number actions
+    * TASK #48: required field by variants
+    * TASK #10: add empty option to select view helper
 
 2.4.3
     2017-02-18
